# pinecone-client

./: .gitignore  Cargo.toml  Makefile
client_sdk/: Cargo.toml
client_sdk/src/: data_types.rs
client_sdk/src/client/: control_plane.rs  pinecone_client.rs
client_sdk/src/utils/: mod.rs
pinecone/: Cargo.toml
