[package]
name = "client_sdk"
version.workspace = true
edition = "2021"
repository = "https://github.com/" # TODO
description = "SDK of the client" # TODO

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
prost = "0.12.3"
prost-types = "0.12.3"
reqwest = { version = "0.11.24", features = ["json"]}
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
webpki-roots = "0.26.1"
# pyo3 = { version = "0.20.3", features = ["extension-module"] }
derivative = "2.2.0"
index_service = { version = "0.1.0", path = "../index_service" }
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
tonic-build = "0.11.0"
