[package]
name = "pinecone"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pinecone"
crate-type = ["cdylib"]
bench=false



[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
client_sdk = {path = "../client_sdk" }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.11.24", features = ["json"] }
pyo3-asyncio = {version = "0.20.0", features = ["tokio-runtime"]}
